--- a/public/css/invoice.css
+++ b/public/css/invoice.css
@@ -7,7 +7,17 @@
     padding:0px
 }
 
-h3{
+h3 h6{
     margin: 0px;
     color: #999999;
+}
+
+.wraptocenter {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+
+}
+.wraptocenter * {
+    vertical-align: middle;
 }
