added logic to load invoices from the database

--- a/public/css/invoice.css
+++ b/public/css/invoice.css
@@ -1,6 +1,6 @@
 .invoice{
-    background-color:
-    white; margin-top: 5px;
+    background-color:white;
+    margin-top: 5px;
     margin-bottom: 0px;
     margin-left:0px;
     margin-right:0px;
